--- a/src/Gui/fxml/StartUpWizard.fxml
+++ b/src/Gui/fxml/StartUpWizard.fxml
@@ -5,31 +5,20 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <BorderPane id="BorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="434.0" prefWidth="1021.0" rotate="0.0" snapToPixel="true" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.StartUpWizardController">
   <center>
-    <GridPane hgap="50.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="338.0" prefWidth="661.0" vgap="0.0">
+    <GridPane gridLinesVisible="false" hgap="3.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="338.0" prefWidth="661.0" vgap="0.0">
       <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="367.0" minWidth="10.0" prefWidth="279.0" />
-        <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="271.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="367.0" minWidth="284.0" prefWidth="278.0" />
+        <ColumnConstraints fillWidth="false" hgrow="NEVER" maxWidth="5.0" minWidth="0.0" prefWidth="18.0" />
+        <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="719.0" />
       </columnConstraints>
-      <padding>
-        <Insets />
-      </padding>
-      <rowConstraints>
-        <RowConstraints maxHeight="-1.0" minHeight="-1.0" prefHeight="-1.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="-1.0" vgrow="ALWAYS" />
-        <RowConstraints maxHeight="278.0" minHeight="10.0" prefHeight="-1.0" vgrow="NEVER" />
-      </rowConstraints>
-      <BorderPane.margin>
-        <Insets bottom="5.0" top="5.0" />
-      </BorderPane.margin>
-      <Button fx:id="createButton" contentDisplay="RIGHT" disable="true" mnemonicParsing="false" onAction="#createExperiment" prefHeight="-1.0" prefWidth="100.0" text="Create" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+      <Label prefWidth="107.9998779296875" text="New Experiment" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="1">
-        <Button fx:id="tsFile1SelectButton" layoutX="4.0" layoutY="32.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="164.0" style="-fx-border-color: transparent;&#10;-fx-focus-color: transparent;&#10;-fx-border-radius: 4px 0 0 4px;" text="Choose File..." textAlignment="LEFT" textOverrun="LEADING_ELLIPSIS" />
-        <Button fx:id="tsFile2SelectButton" layoutX="4.0" layoutY="106.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="164.0" style="-fx-border-color:transparent;&#10;-fx-focus-color:transparent;&#10;-fx-border-radius: 4px 0 0 4px;" text="Choose File..." textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS" />
         <Label layoutX="4.0" layoutY="-1.0" prefHeight="33.0" prefWidth="256.0" text="Time Series File 1" />
-        <Label layoutX="4.0" layoutY="73.0" prefHeight="33.0" prefWidth="256.0" text="Time Series File 2" />
+        <Button fx:id="tsFile1SelectButton" layoutX="4.0" layoutY="32.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="164.0" style="-fx-border-color: transparent;&#10;-fx-focus-color: transparent;&#10;-fx-border-radius: 4px 0 0 4px;" text="Choose File..." textAlignment="LEFT" textOverrun="LEADING_ELLIPSIS" />
         <MenuButton fx:id="tsFile1SeparatorMenuButton" layoutX="167.0" layoutY="32.0" mnemonicParsing="false" prefHeight="26.0" style="-fx-border-color: transparent;&#10;-fx-focus-color: transparent;&#10;-fx-border-radius: 0 4px 4px 0;" text="Separator">
           <items>
             <RadioMenuItem mnemonicParsing="false" selected="true" text="Fixed Width" fx:id="file1FixedWidthSeparatorRadio">
@@ -48,6 +37,8 @@
             <RadioMenuItem mnemonicParsing="false" text="Tab" toggleGroup="$file1Separator" fx:id="file1TabSeparatorRadio" />
           </items>
         </MenuButton>
+        <Label layoutX="4.0" layoutY="73.0" prefHeight="33.0" prefWidth="256.0" text="Time Series File 2" />
+        <Button fx:id="tsFile2SelectButton" layoutX="4.0" layoutY="106.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="164.0" style="-fx-border-color:transparent;&#10;-fx-focus-color:transparent;&#10;-fx-border-radius: 4px 0 0 4px;" text="Choose File..." textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS" />
         <MenuButton fx:id="tsFile2SeparatorMenuButton" layoutX="167.0" layoutY="106.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="-1.0" style="-fx-focus-color:transparent;&#10;-fx-border-color:transparent;&#10;-fx-border-radius: 0 4px 4px 0;" text="Separator">
           <items>
             <RadioMenuItem mnemonicParsing="false" selected="true" text="Fixed Width" fx:id="file2FixedWidthSeparatorRadio">
@@ -67,20 +58,21 @@
           </items>
         </MenuButton>
       </AnchorPane>
-      <Label prefWidth="107.9998779296875" text="New Experiment" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
-      <Label text="Existing Experiments" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
-      <HBox id="HBox" alignment="CENTER" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-        <Button fx:id="loadButton" disable="true" mnemonicParsing="false" onAction="#loadExperiment" prefHeight="-1.0" prefWidth="100.0" style=";" text="Load" />
-      </HBox>
-      <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-        <Label prefHeight="33.0" prefWidth="256.0" text="Experiment File" />
-        <Button fx:id="experimentFileSelectButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="300.0000999999975" style="-fx-border-color:transparent;&#10;-fx-focus-color:transparent;&#10;-fx-border-radius: 4px 0 0 4px;" text="Choose File..." textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
+      <Button fx:id="createButton" contentDisplay="RIGHT" disable="true" mnemonicParsing="false" onAction="#createExperiment" prefHeight="28.0" prefWidth="149.0" text="Create" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+        <graphic>
+          <ProgressIndicator id="parserProgress" fx:id="parserProgressIndicator" maxHeight="20.0" maxWidth="20.0" progress="-1.0" visible="false" />
+        </graphic>
+      </Button>
+      <Label text="Existing Experiments" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
+      <VBox prefHeight="200.0" prefWidth="100.0" spacing="-1.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+        <Label prefHeight="33.0" prefWidth="256.0" text="Experiment File" VBox.vgrow="NEVER" />
+        <Button fx:id="experimentFileSelectButton" maxHeight="26.0" minHeight="26.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="300.0000999999975" style="-fx-border-color:transparent;&#10;-fx-focus-color:transparent;&#10;-fx-border-radius: 4px 0 0 4px;" text="Choose File..." textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS" VBox.vgrow="NEVER">
           <tooltip>
             <Tooltip text="Choose an experiment file (usually generated by this application) in NetCDF format." />
           </tooltip>
         </Button>
         <Label prefHeight="33.0" prefWidth="256.0" text="Recent Experiments" />
-        <ListView fx:id="recentExperiments" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+        <ListView fx:id="recentExperiments" prefHeight="200.0" prefWidth="200.0" style="" VBox.vgrow="ALWAYS">
           <contextMenu>
             <ContextMenu>
               <items>
@@ -90,6 +82,21 @@
           </contextMenu>
         </ListView>
       </VBox>
+      <HBox id="HBox" alignment="CENTER" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+        <Button fx:id="loadButton" disable="true" mnemonicParsing="false" onAction="#loadExperiment" prefHeight="49.0" prefWidth="128.0" style=";" text="Load" />
+      </HBox>
+      <Line endX="0.0" endY="300.0" scaleY="2.0" startX="0.0" stroke="GREY" strokeWidth="1.0" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.rowSpan="2147483647" GridPane.vgrow="ALWAYS" />
+      <padding>
+        <Insets />
+      </padding>
+      <rowConstraints>
+        <RowConstraints maxHeight="16.0" prefHeight="16.0" vgrow="NEVER" />
+        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="263.0" vgrow="ALWAYS" />
+        <RowConstraints maxHeight="278.0" minHeight="10.0" prefHeight="28.0" vgrow="NEVER" />
+      </rowConstraints>
+      <BorderPane.margin>
+        <Insets bottom="5.0" top="5.0" />
+      </BorderPane.margin>
     </GridPane>
   </center>
   <top>
@@ -106,7 +113,7 @@
       <Label layoutY="68.0" text="Patrick Köthur" AnchorPane.leftAnchor="10.0" />
       <Label layoutY="87.0" text="carl.witt@gfz-potsdam.de" AnchorPane.leftAnchor="176.0" />
       <Label layoutY="68.0" text="patrick.koethur@gfz-potsdam.de" AnchorPane.leftAnchor="130.0" />
-      <Label layoutX="10.0" layoutY="37.0" prefWidth="211.0" text="Prototype (update 17. 10. 2014)" />
+      <Label layoutX="10.0" layoutY="37.0" prefWidth="284.0" text="Prototype (build 5. 11. 2014)" />
     </AnchorPane>
   </top>
 </BorderPane>
